Scroll into view - make sure marker is not hidden under fixed menu.

--- a/client/src/containers/App.css
+++ b/client/src/containers/App.css
@@ -295,6 +295,7 @@ button[disabled] {
 div.wrapper {
   display: block;
   overflow-x: auto;
+  overflow-y: auto;
 
 }
 
